--- a/Artist Portfolio Project/style.css
+++ b/Artist Portfolio Project/style.css
@@ -1,3 +1,55 @@
 body{
     font-family : Cormorant, serif;
 }
+
+h1{
+    display : inline-block ;
+    font-weight: 400;
+    margin : 0 30px 0 0 ;
+}
+
+.links{
+    display : inline-block ;
+}
+
+.links li{
+    display : inline-block ;
+}
+
+.links a{
+    color : black ;
+    text-decoration : none ;
+    font-size: 20px ;
+    margin : 0 8px ;
+}
+
+.links ul{
+    padding: 0;
+}
+
+a.active{
+    border-bottom : 1px solid black ;
+}
+
+.navbar{
+    margin: 30px;
+}
+
+.card img{
+    width : 100% ;
+    height: 500px;
+    background-size: cover;
+}
+
+.card{
+    width : 45% ;
+    display : inline-block ;
+    margin : 20px ;
+    box-sizing: border-box;
+    padding : 20px ;
+    border: 1px solid black ;
+}
+
+.card h2{
+    display : inline-block ;
+}
