--- a/Blog Post Project/styles.css
+++ b/Blog Post Project/styles.css
@@ -1,6 +1,6 @@
 body{
     font-family : "Mukta", sans-serif ;
-    font-size: 18px ;
+    font-size: 16px ;
     margin : 0 ;
     padding : 0 ;
     letter-spacing: 0.5px ;
@@ -24,6 +24,40 @@ h1, h2, h3, h4, h5, h6{
     font-size: 14px;
 }
 
-span{
-    color : rgb(207, 136, 4) ;
+.info span{
+    color : #e95400 ;
+    letter-spacing: 1px;
+}
+
+.headline{
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 0px ;
+    margin : 40px 0;
+    font-size: 18px;
+    font-family: "Bitter", serif ;
+}
+
+.headline span{
+    color : #e95400
+}
+
+h2{
+    font-size: 50px;
+    font-weight: 500 ;
+    letter-spacing:-0.5px ;
+}
+
+.quote{
+    font-style : italic;
+    font-size : 15px ;
+    border-left : 2px solid #e95400 ;
+    padding-left : 16px ;
+    margin : 32px 0 32px 32px ;
+}
+
+.quote cite{
+    display : block ;
+    font-weight: bold ;
+    margin-left : 20px ;
 }
