--- a/Blog Post Project/styles.css
+++ b/Blog Post Project/styles.css
@@ -8,8 +8,68 @@ body{
 
 h1, h2, h3, h4, h5, h6{
     font-family : "Bitter", serif ;
-    font-weight: 600 ;
+    font-weight: 500 ;
 }
+
+/* Hero section  */
+
+.hero{
+    background-color: #863ae8;
+    height : 100vh ;
+    color : white ;
+    text-align: center;
+    display : flex ;
+    align-items: center ;
+    justify-content: center;
+    flex-direction: column ;
+}
+
+.hero h1, .hero p{
+    width : 75% ;
+    max-width: 900px;
+    margin : 16px 0 ;
+}
+
+.hero hr{
+    width: 50% ;
+    margin : 20px 0 ;
+}
+
+h1{
+    font-size : 80px ;
+    font-weight : 400 ;
+    letter-spacing: -1.5px ;
+    margin : 0 ;
+}
+
+/* content section */
+
+
+h2{
+    font-size: 50px;
+    letter-spacing:-0.5px ;
+}
+
+h3{
+    font-size: 38px;
+    letter-spacing: 0px ;
+}
+
+h4{
+    font-size: 30px;
+    letter-spacing: 0.25px ;
+}
+
+h5{
+    font-size: 20px;
+    letter-spacing: 0.25px ;
+}
+
+h6{
+    font-size: 15px;
+    letter-spacing: 0.35px ;
+}
+
 .content{
     max-width : 900px ;
     margin : 0 auto ;
@@ -22,6 +82,7 @@ h1, h2, h3, h4, h5, h6{
     font-family: "Bitter", serif;
     font-weight: bold ;
     font-size: 14px;
+    margin : 20px 0 ;
 }
 
 .info span{
@@ -32,7 +93,7 @@ h1, h2, h3, h4, h5, h6{
 .headline{
     text-transform: uppercase;
     font-weight: 500;
-    letter-spacing: 0px ;
+    letter-spacing: 1px ;
     margin : 40px 0;
     font-size: 18px;
     font-family: "Bitter", serif ;
@@ -42,11 +103,7 @@ h1, h2, h3, h4, h5, h6{
     color : #e95400
 }
 
-h2{
-    font-size: 50px;
-    font-weight: 500 ;
-    letter-spacing:-0.5px ;
-}
+
 
 .quote{
     font-style : italic;
@@ -60,4 +117,38 @@ h2{
     display : block ;
     font-weight: bold ;
     margin-left : 20px ;
+}
+
+.new-section{
+    text-transform : capitalize ;
+}
+
+code{
+    color : #e95400 ;
+    font-weight: bold ;
+}
+
+/* footer section */
+
+footer{
+    text-align: center;
+    background-color : #863ae8 ;
+    width : 100% ;
+    height : 80px ;
+}
+
+footer li{
+    display : inline-block ;
+    list-style-type: none;
+    margin : 25px 30px ;
+}
+
+footer li a{
+    text-decoration : none ;
+    color : white ;
+}
+
+footer li a:hover{
+    text-decoration : underline ;
+    color : white ;
 }
